# clang-tidy-diff-hook

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
src/: add_headers.py  clang_tidy_diff.py  utils.py
