[metadata]
name = simple-precommit-hooks
version = 0.1.0
description = Dumb clang-tidy-diff hooks.
url = https://github.com/wkjung/clang-tidy-diff-hook
author = Wonkyung Jung
author_email = jungwk@snu.ac.kr
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
install_requires =
    compdb == 0.2.0

[options.entry_points]
console_scripts =
    clang-tidy-diff-hook = src.clang_tidy_diff:main
    add-headers = src.add_headers:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
